# chirpnet_project

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
chirpnet/: cli.py  config.py
chirpnet/config/: __init__.py  config.py
chirpnet/data/: __init__.py  chirpnet_downloader.py  data_exploration_helpers.py
chirpnet/data_exploration/: __init__.py  data_exploration_helpers.py
chirpnet/data_gathering/: __init__.py  chirpnet_downloader.py
deployments/: xenocanto_data_download.py
notebooks/: cantopy_test.ipynb  clean_species_list.ipynb
resources/: ERLoB2021_categories.xlsx  download_species_data_config.json
resources/species_list/: european_species_list.csv  european_species_list_short.csv
